# llm_proxy

./: .dockerignore  .env.example  .gitignore  Dockerfile  pyproject.toml  requirements.txt
app/: __init__.py  config.py  dependencies.py  exceptions.py  main.py
app/api/v1/: router.py
app/api/v1/endpoints/: captions.py  chat.py  health.py  images.py  users.py
app/auth/: jwt.py  schemas.py
app/schemas/: caption.py  chat.py  image.py  job.py  user.py
app/services/: __init__.py  caption_service.py  chat_service.py  gen_image_service.py  job_store.py  stats_service.py
app/utils/: gemini.py  logger.py
tests/: conftest.py  test_main.py
tests/api/v1/: __init__.py  test_captions.py  test_chat.py  test_health.py  test_users.py
tests/auth/: test_jwt.py
